Fixed Home Page Alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -578,15 +578,18 @@ main {
 /*-----------------------------------*\
   #HOME
 \*-----------------------------------*/
-#profile {
-  display: flex;
-  justify-content: center;
-  align-items: center; /* Add this line */
-  gap: 5rem;
-  height: 57vh;
+
+.home {
+  position: relative; /* Make .home a positioning context for #profile */
+  height: 100vh; /* take up all the viewport height */
 }
 
-
+#profile {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%); /* Shift the element back by half of its width and height */
+}
 .section__text {
   align-self: center;
   text-align: center;
@@ -629,7 +632,7 @@ main {
 }
 
 .section__text__p1 {
-  font-size: 1.5rem;
+  font-size: 2vw;
   text-align: center;
   margin-bottom: 1rem;
   color: var(--light-gray);
